Added model save, loss plot and test samples

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 gpt.py
 learn_pytorch.py
-.DS_Store
 remove_folder_spaces.sh
 Day_15_Feed_Forward_Network/MNIST/raw
 data
+cifar10_cnn.pth
+.DS_Store
